Update 101.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
@@ -19,4 +19,93 @@
 
 ## SysVinit
 
-Диспетчер служб, основанный на стандарте SysVinit, будет предоставлять предопределенные наборы состояний системы, называемые *уровнями выполнения*, и соответствующие им файлы сценариев службы для выполнения. Уровни выполнения нумеруются от 0 до 6 и обычно используются для следующих целей: Уровень выполнения 0 Завершение работы системы. Уровень выполнения 1, s или одиночный Однопользовательский режим, без сети и других несущественных возможностей (режим обслуживания). Уровень выполнения 2, 3 или 4 Многопользовательский режим. Пользователи могут войти в систему с консоли или по сети. Уровни выполнения 2 и 4 используются нечасто. Уровень выполнения 5 Многопользовательский режим. Это эквивалентно 3 плюс логин в графическом режиме. Уровень выполнения 6 Перезагрузка системы. За управление уровнями запуска и связанными демонами / ресурсами отвечает программа / sbin / init. Во время инициализации системы программа init идентифицирует запрошенный уровень запуска, определенный параметром ядра или в файле / etc / inittab, и загружает связанные сценарии, перечисленные там для данного уровня запуска. Каждый уровень запуска может иметь множество связанных служебных файлов, обычно сценариев в каталоге /etc/init.d/. Поскольку не все уровни выполнения в разных дистрибутивах Linux эквивалентны, краткое описание назначения уровня выполнения также можно найти в дистрибутивах на основе SysV. В синтаксисе файла / etc / inittab используется следующий формат:
+Диспетчер служб, основанный на стандарте SysVinit, будет предоставлять предопределенные наборы состояний системы, называемые *уровнями выполнения*, и соответствующие им файлы сценариев службы для выполнения. Уровни выполнения нумеруются от 0 до 6 и обычно используются для следующих целей: 
+Уровень выполнения 0  
+    Завершение работы системы. 
+    
+Уровень выполнения 1, s или single  
+    Однопользовательский режим, без сети и других несущественных возможностей(режим обслуживания). 
+
+Уровень выполнения 2, 3 или 4  
+    Многопользовательский режим. Пользователи могут войти в систему с консоли или по сети. Уровни выполнения 2 и 4 используются нечасто. 
+    
+Уровень выполнения 5  
+    Многопользовательский режим. Это эквивалентно 3 уровню плюс логин в графическом режиме. 
+
+Уровень выполнения 6  
+    Перезагрузка системы. 
+    
+За управление уровнями запуска и связанными демонами/ресурсами отвечает программа `/sbin/init`. Во время инициализации системы программа `init` идентифицирует запрошенный уровень запуска, определенный параметром ядра или в файле `/etc/inittab`, и загружает связанные сценарии, перечисленные там для данного уровня запуска. Каждый уровень запуска может иметь множество связанных служебных файлов, обычно сценариев в каталоге `/etc/init.d/`. Поскольку не все уровни выполнения в разных дистрибутивах Linux эквивалентны, краткое описание назначения уровня выполнения также можно найти в дистрибутивах на основе SysV. 
+    
+В синтаксисе файла `/etc/inittab` используется следующий формат:
+```console
+id:runlevels:action:process
+```
+
+`id` - это общее имя длиной до четырех символов, используемое для идентификации записи. Запись `runlevels` - это список номеров уровней запуска, для которых должно быть выполнено указанное действие. `action` определяет, как `init` будет выполнять процесс, обозначенный термином `process`. Доступные действия: 
+
+    `boot`  
+Процесс будет выполнен во время инициализации системы. `runlevels` поля игнорируются. 
+
+    `bootwait`  
+Процесс будет выполнен во время инициализации системы, и `init` будет ждать его завершения, чтобы продолжить.  
+`runlevels` поля игнорируются. 
+
+    `sysinit`  
+Процесс будет выполнен после инициализации системы, независимо от уровня выполнения. Уровни выполнения поля игнорируются. 
+
+    `wait`  
+Процесс будет выполнен для заданных уровней запуска, и `init` будет ждать завершения, чтобы продолжить. 
+
+    `respawn`  
+В случае прекращения процесс будет перезапущен. 
+
+    `ctrlaltdel`  
+Процесс будет выполнен, когда процесс init получит сигнал `SIGINT`, запускаемый при нажатии комбинации клавиш <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Del</kbd>. 
+
+Уровень запуска по умолчанию - тот, который будет выбран, если в качестве параметра ядра не указан другой, - также определяется в `/etc/inittab` в записи `id:x:initdefault`. `x` - это номер уровня запуска по умолчанию. Это число никогда не должно быть `0` или `6`, так как это приведет к выключению или перезапуску системы сразу после завершения процесса загрузки. Типичный файл `/etc/inittab` показан ниже:
+```console
+# Default runlevel
+id:3:initdefault:
+
+# Configuration script executed during boot
+si::sysinit:/etc/init.d/rcS
+
+# Action taken on runlevel S (single user)
+~:S:wait:/sbin/sulogin
+
+# Configuration for each execution level
+l0:0:wait:/etc/init.d/rc 0
+l1:1:wait:/etc/init.d/rc 1
+l2:2:wait:/etc/init.d/rc 2
+l3:3:wait:/etc/init.d/rc 3
+l4:4:wait:/etc/init.d/rc 4
+l5:5:wait:/etc/init.d/rc 5
+l6:6:wait:/etc/init.d/rc 6
+
+# Action taken upon ctrl+alt+del keystroke
+ca::ctrlaltdel:/sbin/shutdown -r now
+
+# Enable consoles for runlevels 2 and 3
+1:23:respawn:/sbin/getty tty1 VC linux
+2:23:respawn:/sbin/getty tty2 VC linux
+3:23:respawn:/sbin/getty tty3 VC linux
+4:23:respawn:/sbin/getty tty4 VC linux
+
+# For runlevel 3, also enable serial
+# terminals ttyS0 and ttyS1 (modem) consoles
+S0:3:respawn:/sbin/getty -L 9600 ttyS0 vt320
+S1:3:respawn:/sbin/mgetty -x0 -D ttyS1
+```
+Команду `telinit q` следует выполнять каждый раз после изменения файла `/etc/inittab`. Аргумент `q` (или `Q`) указывает init перезагрузить конфигурацию. Такой шаг важен, чтобы избежать остановки системы из-за неправильной конфигурации в `/etc/inittab`. Сценарии, используемые init для настройки каждого уровня выполнения, хранятся в каталоге `/etc/init.d/`. Каждый уровень запуска имеет связанный каталог в `/etc/` с именем `/etc/rc0.d/`, `/etc/rc1.d/`, `/etc/rc2.d/` и т. д. Со сценариями, которые должны выполняться, когда соответствующий уровень запуска начинается. Поскольку один и тот же сценарий может использоваться на разных уровнях выполнения, файлы в этих каталогах представляют собой просто символические ссылки на фактические сценарии в `/etc/init.d/`. Кроме того, первая буква имени файла ссылки в каталоге уровня запуска указывает, следует ли запускать или прекращать службу для соответствующего уровня запуска. Имя файла ссылки, начинающееся с буквы `K`, определяет, что служба будет завершена при переходе на уровень выполнения (kill). Начиная с буквы `S`, служба будет запускаться при выходе на уровень запуска (start). Например, в каталоге `/etc/rc1.d/` будет много ссылок на сетевые сценарии, начинающиеся с буквы `K`, учитывая, что уровень выполнения 1 - это уровень запуска для одного пользователя без подключения к сети. 
+
+Уровень выполнения команды показывает текущий уровень выполнения системы. Команда `runlevel` показывает два значения, первое - предыдущий уровень выполнения, а второе - текущий уровень:
+```console
+$ runlevel
+N 3
+```
+Буква `N` в выводе показывает, что уровень выполнения не изменился с момента последней загрузки. В этом примере `runlevel 3` - это текущий уровень выполнения системы. Одна и та же программа инициализации может использоваться для переключения между уровнями выполнения в работающей системе без необходимости перезагрузки. Команду `telinit` также можно использовать для переключения между уровнями выполнения. Например, команды `telinit 1`, `telinit s` или `telinit S` переведут систему на уровень запуска 1.
+
+
+## systemd
+
