Update 101.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
@@ -19,11 +19,12 @@
 
 ## SysVinit
 
-Диспетчер служб, основанный на стандарте SysVinit, будет предоставлять предопределенные наборы состояний системы, называемые *уровнями выполнения*, и соответствующие им файлы сценариев службы для выполнения. Уровни выполнения нумеруются от 0 до 6 и обычно используются для следующих целей: 
-Уровень выполнения 0  
+Диспетчер служб, основанный на стандарте SysVinit, будет предоставлять предопределенные наборы состояний системы, называемые *уровнями выполнения*, и соответствующие им файлы сценариев службы для выполнения. Уровни выполнения нумеруются от 0 до 6 и обычно используются для следующих целей:
+
+* Уровень выполнения 0  
     Завершение работы системы. 
     
-Уровень выполнения 1, s или single  
+* Уровень выполнения 1, s или single  
     Однопользовательский режим, без сети и других несущественных возможностей(режим обслуживания). 
 
 Уровень выполнения 2, 3 или 4  
