Update 101.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
@@ -27,13 +27,13 @@
 * Уровень выполнения 1, s или single  
     Однопользовательский режим, без сети и других несущественных возможностей(режим обслуживания). 
 
-Уровень выполнения 2, 3 или 4  
+* Уровень выполнения 2, 3 или 4  
     Многопользовательский режим. Пользователи могут войти в систему с консоли или по сети. Уровни выполнения 2 и 4 используются нечасто. 
     
-Уровень выполнения 5  
+* Уровень выполнения 5  
     Многопользовательский режим. Это эквивалентно 3 уровню плюс логин в графическом режиме. 
 
-Уровень выполнения 6  
+* Уровень выполнения 6  
     Перезагрузка системы. 
     
 За управление уровнями запуска и связанными демонами/ресурсами отвечает программа `/sbin/init`. Во время инициализации системы программа `init` идентифицирует запрошенный уровень запуска, определенный параметром ядра или в файле `/etc/inittab`, и загружает связанные сценарии, перечисленные там для данного уровня запуска. Каждый уровень запуска может иметь множество связанных служебных файлов, обычно сценариев в каталоге `/etc/init.d/`. Поскольку не все уровни выполнения в разных дистрибутивах Linux эквивалентны, краткое описание назначения уровня выполнения также можно найти в дистрибутивах на основе SysV. 
@@ -45,23 +45,23 @@ id:runlevels:action:process
 
 `id` - это общее имя длиной до четырех символов, используемое для идентификации записи. Запись `runlevels` - это список номеров уровней запуска, для которых должно быть выполнено указанное действие. `action` определяет, как `init` будет выполнять процесс, обозначенный термином `process`. Доступные действия: 
 
-    `boot`  
+* `boot`  
 Процесс будет выполнен во время инициализации системы. `runlevels` поля игнорируются. 
 
-    `bootwait`  
+* `bootwait`  
 Процесс будет выполнен во время инициализации системы, и `init` будет ждать его завершения, чтобы продолжить.  
 `runlevels` поля игнорируются. 
 
-    `sysinit`  
+* `sysinit`  
 Процесс будет выполнен после инициализации системы, независимо от уровня выполнения. Уровни выполнения поля игнорируются. 
 
-    `wait`  
+* `wait`  
 Процесс будет выполнен для заданных уровней запуска, и `init` будет ждать завершения, чтобы продолжить. 
 
-    `respawn`  
+* `respawn`  
 В случае прекращения процесс будет перезапущен. 
 
-    `ctrlaltdel`  
+* `ctrlaltdel`  
 Процесс будет выполнен, когда процесс init получит сигнал `SIGINT`, запускаемый при нажатии комбинации клавиш <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Del</kbd>. 
 
 Уровень запуска по умолчанию - тот, который будет выбран, если в качестве параметра ядра не указан другой, - также определяется в `/etc/inittab` в записи `id:x:initdefault`. `x` - это номер уровня запуска по умолчанию. Это число никогда не должно быть `0` или `6`, так как это приведет к выключению или перезапуску системы сразу после завершения процесса загрузки. Типичный файл `/etc/inittab` показан ниже:
