Update 101.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
@@ -110,3 +110,45 @@ N 3
 
 ## systemd
 
+В настоящее время systemd является наиболее широко используемым набором инструментов для управления системными ресурсами и службами, которые systemd называет *модулями*. Модуль состоит из имени, типа и соответствующего файла конфигурации. Например, модуль для процесса сервера *httpd* (например, веб-сервер Apache) будет `httpd.service` в дистрибутивах на основе Red Hat, а его файл конфигурации также будет называться `httpd.service` (в дистрибутивах на основе Debian этот модуль называется `apache2.service`). 
+
+Существует семь различных типов модулей systemd: 
+
+* услуга  
+Самый распространенный тип модуля для активных системных ресурсов, которые можно запускать, прерывать и перезагружать. 
+* разъем  
+Тип устройства сокета может быть сокетом файловой системы или сетевым сокетом. У всех модулей сокета есть соответствующий модуль обслуживания, загружаемый, когда сокет получает запрос. 
+* устройство  
+Единица устройства связана с аппаратным устройством, идентифицированным ядром. Устройство будет считаться модулем systemd только в том случае, если для этой цели существует правило udev. Модуль устройства может использоваться для разрешения зависимостей конфигурации при обнаружении определенного оборудования, учитывая, что свойства из правила udev могут использоваться в качестве параметров для модуля устройства. 
+* устанавливать  
+Модуль монтирования - это определение точки монтирования в файловой системе, подобное записи в `/etc/fstab`. автомонтировать Модуль 
+* automount  
+также является определением точки монтирования в файловой системе, но монтируется автоматически. Каждый модуль автомонтирования имеет соответствующий модуль монтирования, который запускается при доступе к точке монтирования автомонтирования. 
+* цель  
+Целевая единица - это группа других единиц, управляемая как единая единица. 
+* снимок  
+Единица моментального снимка - это сохраненное состояние менеджера systemd(доступно не во всех дистрибутивах Linux). Основная команда для управления юнитами systemd - это `systemctl`. Команда `systemctl` используется для выполнения всех задач, касающихся активации, деактивации, выполнения, прерывания, мониторинга и т. д., Например, для фиктивного модуля с именем `unit.service` наиболее распространенными действиями `systemctl` будут: 
+
+* `systemctl start unit.service`  
+Запускает агрегат. 
+* `systemctl stop unit.service`  
+Останавливает агрегат. 
+* `systemctl restart unit.service`  
+Перезапускает устройство. 
+* `systemctl status unit.service`  
+Показывает состояние устройства, в том числе, работает он или нет. 
+* `systemctl is-active unit.service`  
+Отображается как активный, если блок работает, или неактивный в противном случае. 
+* `systemctl enable unit.service`  
+Включает модуль, то есть модуль будет загружаться во время инициализации системы. 
+* `systemctl disable unit.service`  
+устройство не запускается с системой. 
+* `systemctl is-enabled unit.service`  
+Проверяет, запускается ли агрегат вместе с системой. Ответ хранится в переменной `$?`. Значение `0` указывает, что модуль начинается с системы, а значение `1` указывает, что модуль не запускается с системой.
+
+>В более новых установках systemd фактически отображается конфигурация устройства для времени загрузки. Например:
+>
+>```console
+>$ systemctl is-enabled apparmor.service
+enabled
+```
