Update 101.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
@@ -114,19 +114,19 @@ N 3
 
 Существует семь различных типов модулей systemd: 
 
-* услуга  
+* `service`  
 Самый распространенный тип модуля для активных системных ресурсов, которые можно запускать, прерывать и перезагружать. 
-* разъем  
+* `socket`  
 Тип устройства сокета может быть сокетом файловой системы или сетевым сокетом. У всех модулей сокета есть соответствующий модуль обслуживания, загружаемый, когда сокет получает запрос. 
-* устройство  
+* `device`  
 Единица устройства связана с аппаратным устройством, идентифицированным ядром. Устройство будет считаться модулем systemd только в том случае, если для этой цели существует правило udev. Модуль устройства может использоваться для разрешения зависимостей конфигурации при обнаружении определенного оборудования, учитывая, что свойства из правила udev могут использоваться в качестве параметров для модуля устройства. 
-* устанавливать  
+* `mount`  
 Модуль монтирования - это определение точки монтирования в файловой системе, подобное записи в `/etc/fstab`. автомонтировать Модуль 
-* automount  
+* `automount`  
 также является определением точки монтирования в файловой системе, но монтируется автоматически. Каждый модуль автомонтирования имеет соответствующий модуль монтирования, который запускается при доступе к точке монтирования автомонтирования. 
-* цель  
+* `target`  
 Целевая единица - это группа других единиц, управляемая как единая единица. 
-* снимок  
+* `snapshot`  
 Единица моментального снимка - это сохраненное состояние менеджера systemd(доступно не во всех дистрибутивах Linux). Основная команда для управления юнитами systemd - это `systemctl`. Команда `systemctl` используется для выполнения всех задач, касающихся активации, деактивации, выполнения, прерывания, мониторинга и т. д., Например, для фиктивного модуля с именем `unit.service` наиболее распространенными действиями `systemctl` будут: 
 
 * `systemctl start unit.service`  
