Update 101.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
@@ -152,3 +152,96 @@ N 3
 >$ systemctl is-enabled apparmor.service
 >enabled
 ```
+Если в системе нет других модулей с таким же именем, то суффикс после точки можно опустить. Если, например, существует только один модуль `httpd` типа `service`, тогда в качестве параметра модуля для `systemctl` достаточно указать только `httpd`. Команда `systemctl` также может управлять `системными целями`. Например, модуль `multi-user.target` объединяет все модули, необходимые для многопользовательской системной среды. Он аналогичен уровню выполнения 3 в системе, использующей SysV. Команда `systemctl isolate` чередует разные цели. Итак, чтобы вручную изменить целевой многопользовательский режим:
+```console
+# systemctl isolate multi-user.target
+```
+Существуют соответствующие цели для уровней запуска SysV, начиная с `runlevelO.target` и заканчивая `runlevel6.target`. Однако systemd не использует файл `/etc/inittab`. Чтобы изменить системную цель по умолчанию, в список параметров ядра можно добавить параметр `systemd.unit`. Например, чтобы использовать `multi-user.target` в качестве стандартной цели, параметр ядра должен иметь вид `systemd.unit=multi-user.target`. Все параметры ядра можно сделать постоянными, изменив конфигурацию загрузчика. Другой способ изменить цель по умолчанию - изменить символическую ссылку `/etc/systemd/system/default.target`, чтобы она указывала на желаемую цель. Переопределение ссылки может быть выполнено самой командой `systemctl`:
+```console
+# systemctl set-default multi-user.target
+```
+Точно так же вы можете определить цель загрузки вашей системы по умолчанию с помощью следующей команды:
+```console
+$ systemctl get-default
+graphical.target
+```
+Подобно системам, использующим SysV, цель по умолчанию никогда не должна указывать на `shutdown.target`, поскольку она соответствует уровню выполнения 0 (завершение работы). 
+
+Файлы конфигурации, связанные с каждым модулем, можно найти в каталоге `/lib/systemd/system/`. Команда `systemctl list-unit-files` выводит список всех доступных модулей и показывает, разрешено ли им запускаться при загрузке системы. Опция `--type` выберет только единицы для данного типа, как в `systemctl list-unit-files --type=service` и `systemctl list-unit-files --type=target`. 
+
+Активные юниты или юниты, которые были активны во время текущего системного сеанса, могут быть перечислены с помощью команды `systemctl list-units`. Как и опция `list-unit-files`, команда `systemctl list-units --type=service` выберет только единицы типа `service`, а команда `systemctl list-units --type=target` выберет только единицы типа `target`. 
+
+systemd также отвечает за запуск и реакцию на события, связанные с питанием. Команда `systemctl suspend` переведет систему в режим пониженного энергопотребления, сохраняя текущие данные в памяти. Команда `systemctl hibernate` скопирует все данные из памяти на диск, поэтому текущее состояние системы может быть восстановлено после ее выключения. Действия, связанные с такими событиями, определены в файле `/etc/systemd/logind.conf` или в отдельных файлах внутри каталога `/etc/systemd/logind.conf.d/`. Однако эту функцию systemd можно использовать только тогда, когда в системе не запущен другой менеджер питания, например демон `acpid`. Демон `acpid` является основным диспетчером питания для Linux и позволяет более точно настраивать действия после событий, связанных с питанием, таких как закрытие крышки ноутбука, низкий уровень заряда аккумулятора или уровень заряда аккумулятора.
+
+
+## Upstart
+
+Сценарии инициализации, используемые Upstart, находятся в каталоге `/etc/init/`. Системные службы могут быть перечислены с помощью команды `initctl list`, которая также показывает текущее состояние служб и, если они доступны, их номера PID.
+```console
+# initctl list
+avahi-cups-reload stop/waiting
+avahi-daemon start/running, process 1123
+mountall-net stop/waiting
+mountnfs-bootclean.sh start/running
+nmbd start/running, process 3085
+passwd stop/waiting
+rc stop/waiting
+rsyslog start/running, process 1095
+tty4 start/running, process 1761
+udev start/running, process 1073
+upstart-udev-bridge start/running, process 1066
+console-setup stop/waiting
+irqbalance start/running, process 1842
+plymouth-log stop/waiting
+smbd start/running, process 1457
+tty5 start/running, process 1764
+failsafe stop/waiting
+```
+У каждого действия Upstart есть собственная независимая команда. Например, команду `start` можно использовать для запуска шестого виртуального терминала:
+```console
+# start tty6
+```
+Текущее состояние ресурса можно проверить с помощью команды `status`:
+```console
+# status tty6
+tty6 start/running, process 3282
+```
+А прерывание обслуживания осуществляется командой `stop`:
+```console
+# stop tty6
+```
+Upstart не использует файл `/etc/inittab` для определения уровней запуска, но унаследованные команды `runlevel` и `telinit` по-прежнему можно использовать для проверки и переключения между уровнями выполнения.
+>Upstart был разработан для дистрибутива Ubuntu Linux, чтобы облегчить параллельный запуск процессов. Ubuntu прекратил использовать Upstart с 2015 года, когда он перешел с Upstart на systemd.
+
+
+## Завершение работы и перезапуск
+
+Неудивительно, что очень традиционная команда, используемая для выключения или перезапуска системы, называется `shutdown` (выключением). Команда `shutdown` добавляет дополнительные функции к процессу отключения питания: она автоматически уведомляет всех вошедших в систему пользователей предупреждающим сообщением в их сеансах оболочки, и новые входы в систему предотвращаются. Команда `shutdown` действует как посредник для процедур SysV или systemd, то есть выполняет запрошенное действие, вызывая соответствующее действие в диспетчере служб, принятом системой. 
+
+После `shutdown` все процессы получают сигнал `SIGTERM`, за которым следует сигнал `SIGKILL`, после чего система выключается или меняет уровень выполнения. По умолчанию, когда не используются ни параметры `-h`, ни `-r`, система переходит на уровень выполнения 1, то есть в однопользовательский режим. Чтобы изменить параметры выключения по умолчанию, команду следует выполнить со следующим синтаксисом:
+```console
+$ shutdown [option] time [message]
+```
+Тоько параметр `time` обязателен. Параметр `time` определяет, когда будет выполнено запрошенное действие, принимая следующие форматы: 
+
+* `hh:mm`  
+Этот формат определяет время выполнения в часах и минутах. 
+* `+m` 
+Этот формат определяет, сколько минут ждать перед выполнением. 
+* `now` или `+0`  
+Этот формат определяет немедленное выполнение. 
+
+Параметр `message` - это текст предупреждения, отправляемый всем терминальным сеансам авторизованных пользователей. 
+
+Реализация SysV позволяет ограничить количество пользователей, которые смогут перезапустить машину, нажав <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Del</kbd>. Это возможно, поместив опцию `-a` для команды `shutdown`, присутствующей в строке, касающейся `ctrlaltdel` в файле `/etc/inittab`. Таким образом, только пользователи, чьи имена находятся в файле `/etc/shutdown.allow`, смогут перезапустить систему с помощью комбинации клавиш <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Del</kbd>. 
+
+Команду `systemctl` также можно использовать для выключения или перезапуска компьютера в системах, использующих systemd. Для перезапуска системы следует использовать команду `systemctl reboot`. Для выключения системы следует использовать команду `systemctl poweroff`. Обе команды требуют для запуска прав root, так как обычные пользователи не могут выполнять такие процедуры.
+
+>Некоторые дистрибутивы Linux будут связывать выключение и перезагрузку с systemctl как отдельные команды. Например:
+>```console
+>$ sudo which poweroff
+/usr/sbin/poweroff
+$ sudo ls -l /usr/sbin/poweroff
+lrwxrwxrwx 1 root root 14 Aug 20 07:50 /usr/sbin/poweroff -> /bin/systemctl
+>```
+Не все операции по техническому обслуживанию требуют выключения или перезапуска системы. Однако, когда необходимо изменить состояние системы на однопользовательский режим, важно предупредить вошедших в систему пользователей, чтобы они не пострадали от внезапного прекращения их деятельности. Подобно тому, что делает команда `shutdown` при выключении или перезапуске системы, команда `wall` может отправлять сообщение терминальным сеансам всех вошедших в систему пользователей. Для этого системному администратору нужно только предоставить файл или напрямую написать сообщение в качестве параметра для команды `wall`.
