Update 101.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
@@ -240,8 +240,10 @@ $ shutdown [option] time [message]
 >Некоторые дистрибутивы Linux будут связывать выключение и перезагрузку с systemctl как отдельные команды. Например:
 >```console
 >$ sudo which poweroff
-/usr/sbin/poweroff
-$ sudo ls -l /usr/sbin/poweroff
-lrwxrwxrwx 1 root root 14 Aug 20 07:50 /usr/sbin/poweroff -> /bin/systemctl
+>/usr/sbin/poweroff
+>$ sudo ls -l /usr/sbin/poweroff
+>lrwxrwxrwx 1 root root 14 Aug 20 07:50 /usr/sbin/poweroff -> /bin/systemctl
 >```
-Не все операции по техническому обслуживанию требуют выключения или перезапуска системы. Однако, когда необходимо изменить состояние системы на однопользовательский режим, важно предупредить вошедших в систему пользователей, чтобы они не пострадали от внезапного прекращения их деятельности. Подобно тому, что делает команда `shutdown` при выключении или перезапуске системы, команда `wall` может отправлять сообщение терминальным сеансам всех вошедших в систему пользователей. Для этого системному администратору нужно только предоставить файл или напрямую написать сообщение в качестве параметра для команды `wall`.
+Не все операции по техническому обслуживанию требуют выключения или перезапуска системы. Однако, когда необходимо изменить состояние системы на однопользовательский режим, важно предупредить вошедших в систему пользователей, чтобы они не пострадали от внезапного прекращения их деятельности. 
+
+Подобно тому, что делает команда `shutdown` при выключении или перезапуске системы, команда `wall` может отправлять сообщение терминальным сеансам всех вошедших в систему пользователей. Для этого системному администратору нужно только предоставить файл или напрямую написать сообщение в качестве параметра для команды `wall`.
