--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
@@ -249,16 +249,44 @@ $ shutdown [option] time [message]
 Подобно тому, что делает команда `shutdown` при выключении или перезапуске системы, команда `wall` может отправлять сообщение терминальным сеансам всех вошедших в систему пользователей. Для этого системному администратору нужно только предоставить файл или напрямую написать сообщение в качестве параметра для команды `wall`.
 
 
-# Упражнения для закрепления
+## Упражнения для закрепления
+
+1. Как можно было использовать команду `telinit` для перезагрузки системы? 
+
+2. Что произойдет со службами, связанными с файлом `/etc/rc1.d/K90network`, когда система перейдет на уровень запуска 1? 
+
+3. Используя команду `systemctl`, как пользователь может проверить, запущен ли модуль `sshd.service`? 
+
+4. Какая команда должна быть выполнена в системе на основе `systemd`, чтобы включить активацию модуля sshd.service во время инициализации системы?
 
 
-# Упражнения на размышление
+## Упражнения на размышление
+
+1. В системе на основе SysV предположим, что уровень запуска по умолчанию, определенный в `/etc/inittab`, равен 3, но система всегда запускается на уровне выполнения 1. Какова вероятная причина этого? 
+
+2. Хотя файл `/sbin/init` можно найти в системах на основе systemd, это всего лишь символическая ссылка на другой исполняемый файл. В таких системах на какой файл указывает `/sbin/init`? 
+
+3. Как можно проверить системную цель по умолчанию в системе на основе systemd? 
+
+4. Как можно отменить перезагрузку системы, запланированную с помощью команды выключения?
 
 
-# Резюме
+## Резюме
+
+В этом уроке рассматриваются основные утилиты, используемые в качестве менеджеров служб в дистрибутивах Linux. У каждой из утилит SysVinit, systemd и Upstart есть свой подход к управлению системными службами и состояниями системы. В уроке рассматриваются следующие темы: 
+* Что такое системные службы и их роль в операционной системе. 
+* Основные понятия и базовое использование команд SysVinit, systemd и Upstart. 
+* Как правильно запускать, останавливать и перезапускать системные службы и саму систему. 
+
+Были рассмотрены следующие команды и процедуры: 
+* Команды и файлы, относящиеся к SysVinit, такие как `init`, `/etc/inittab` и `telinit`. 
+* Основная команда systemd: `systemctl`. 
+* Команды Upstart: `initctl`, `status`, `start`, `stop`. 
+* Традиционные команды управления питанием, такие как выключение и команда `wall`.
 
 
-# Ответы на упражнения для закрепления
+## Ответы на упражнения для закрепления
+
 
 
 # Ответы на упражнения для размышления
