--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
@@ -19,7 +19,7 @@
 
 ## SysVinit
 
-Диспетчер служб, основанный на стандарте SysVinit, будет предоставлять предопределенные наборы состояний системы, называемые *уровнями выполнения*, и соответствующие им файлы сценариев службы для выполнения. Уровни выполнения нумеруются от 0 до 6 и обычно используются для следующих целей:
+Диспетчер служб, основанный на стандарте SysVinit, предоставляет предопределенный набор системых состояний, называемые *уровнями выполнения* и их соответствующие файлы служебных сценариев для выполнения. Уровни выполнения нумеруются от 0 до 6 и обычно используются для следующих целей:
 
 * Уровень выполнения 0  
     Завершение работы системы. 
@@ -28,21 +28,20 @@
     Однопользовательский режим, без сети и других несущественных возможностей(режим обслуживания). 
 
 * Уровень выполнения 2, 3 или 4  
-    Многопользовательский режим. Пользователи могут войти в систему с консоли или по сети. Уровни выполнения 2 и 4 используются нечасто. 
+    Многопользовательский режим. Пользователи могут войти в систему с консоли или удаленно. Уровни выполнения 2 и 4 используются нечасто. 
     
 * Уровень выполнения 5  
-    Многопользовательский режим. Это эквивалентно 3 уровню плюс логин в графическом режиме. 
+    Многопользовательский режим. Это эквивалентно 3 уровню и возможность войти в систему в графическом режиме. 
 
 * Уровень выполнения 6  
     Перезагрузка системы. 
     
-За управление уровнями запуска и связанными демонами/ресурсами отвечает программа `/sbin/init`. Во время инициализации системы программа `init` идентифицирует запрошенный уровень запуска, определенный параметром ядра или в файле `/etc/inittab`, и загружает связанные сценарии, перечисленные там для данного уровня запуска. Каждый уровень запуска может иметь множество связанных служебных файлов, обычно сценариев в каталоге `/etc/init.d/`. Поскольку не все уровни выполнения в разных дистрибутивах Linux эквивалентны, краткое описание назначения уровня выполнения также можно найти в дистрибутивах на основе SysV. 
+За управление уровнями выполнения и связанными демонами/ресурсами отвечает программа `/sbin/init`. Во время инициализации системы программа `init` идентифицирует запрошенный уровень выполнения, определенный параметром ядра или в файле `/etc/inittab`, и загружает связанные сценарии, перечисленные там для данного уровня выполнения. Каждый уровень выполнения может иметь множество связанных служебных файлов, обычно скрипты в каталоге `/etc/init.d/`. Поскольку не все уровни выполнения в разных дистрибутивах Linux эквивалентны, краткое описание назначения уровней выполнения также можно найти в дистрибутивах на основе SysV. 
     
 В синтаксисе файла `/etc/inittab` используется следующий формат:
 ```console
 id:runlevels:action:process
 ```
-
 `id` - это общее имя длиной до четырех символов, используемое для идентификации записи. Запись `runlevels` - это список номеров уровней запуска, для которых должно быть выполнено указанное действие. `action` определяет, как `init` будет выполнять процесс, обозначенный термином `process`. Доступные действия: 
 
 * `boot`  
@@ -53,7 +52,7 @@ id:runlevels:action:process
 `runlevels` поля игнорируются. 
 
 * `sysinit`  
-Процесс будет выполнен после инициализации системы, независимо от уровня выполнения. Уровни выполнения поля игнорируются. 
+Процесс будет выполнен после инициализации системы, независимо от уровня выполнения. Поле `runlevels ` игнорируется. 
 
 * `wait`  
 Процесс будет выполнен для заданных уровней запуска, и `init` будет ждать завершения, чтобы продолжить. 
@@ -62,9 +61,9 @@ id:runlevels:action:process
 В случае прекращения процесс будет перезапущен. 
 
 * `ctrlaltdel`  
-Процесс будет выполнен, когда процесс init получит сигнал `SIGINT`, запускаемый при нажатии комбинации клавиш <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Del</kbd>. 
+Процесс будет выполнен, когда init процесс получит сигнал `SIGINT`, запускаемый при нажатии комбинации клавиш <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Del</kbd>. 
 
-Уровень запуска по умолчанию - тот, который будет выбран, если в качестве параметра ядра не указан другой, - также определяется в `/etc/inittab` в записи `id:x:initdefault`. `x` - это номер уровня запуска по умолчанию. Это число никогда не должно быть `0` или `6`, так как это приведет к выключению или перезапуску системы сразу после завершения процесса загрузки. Типичный файл `/etc/inittab` показан ниже:
+Уровень запуска по умолчанию - это тот, который будет выбран, если в качестве параметра ядра не указан другой, - также определяется в `/etc/inittab` в записи `id:x:initdefault`. `x` - это номер уровня запуска по умолчанию. Это число никогда не должно быть `0` или `6`, так как это приведет к выключению или перезапуску системы сразу после завершения процесса загрузки. Типичный файл `/etc/inittab` показан ниже:
 ```console
 # Default runlevel
 id:3:initdefault:
@@ -98,9 +97,9 @@ ca::ctrlaltdel:/sbin/shutdown -r now
 S0:3:respawn:/sbin/getty -L 9600 ttyS0 vt320
 S1:3:respawn:/sbin/mgetty -x0 -D ttyS1
 ```
-Команду `telinit q` следует выполнять каждый раз после изменения файла `/etc/inittab`. Аргумент `q` (или `Q`) указывает init перезагрузить конфигурацию. Такой шаг важен, чтобы избежать остановки системы из-за неправильной конфигурации в `/etc/inittab`. Сценарии, используемые init для настройки каждого уровня выполнения, хранятся в каталоге `/etc/init.d/`. Каждый уровень запуска имеет связанный каталог в `/etc/` с именем `/etc/rc0.d/`, `/etc/rc1.d/`, `/etc/rc2.d/` и т. д. Со сценариями, которые должны выполняться, когда соответствующий уровень запуска начинается. Поскольку один и тот же сценарий может использоваться на разных уровнях выполнения, файлы в этих каталогах представляют собой просто символические ссылки на фактические сценарии в `/etc/init.d/`. Кроме того, первая буква имени файла ссылки в каталоге уровня запуска указывает, следует ли запускать или прекращать службу для соответствующего уровня запуска. Имя файла ссылки, начинающееся с буквы `K`, определяет, что служба будет завершена при переходе на уровень выполнения (kill). Начиная с буквы `S`, служба будет запускаться при выходе на уровень запуска (start). Например, в каталоге `/etc/rc1.d/` будет много ссылок на сетевые сценарии, начинающиеся с буквы `K`, учитывая, что уровень выполнения 1 - это уровень запуска для одного пользователя без подключения к сети. 
+Команду `telinit q` следует выполнять каждый раз после изменения файла `/etc/inittab`. Аргумент `q` (или `Q`) указывает init перезагрузить конфигурацию. Такой шаг важен, чтобы избежать остановки системы из-за неправильной конфигурации в `/etc/inittab`. Сценарии, используемые init для настройки каждого уровня выполнения, хранятся в каталоге `/etc/init.d/`. Каждый уровень выполнения имеет связанный каталог в `/etc/` с именем `/etc/rc0.d/`, `/etc/rc1.d/`, `/etc/rc2.d/` и т. д. со сценариями, которые должны выполняться, когда соответствующий уровень выполнения начинается. Поскольку один и тот же сценарий может использоваться на разных уровнях выполнения, файлы в этих каталогах представляют собой просто символические ссылки на фактические сценарии в `/etc/init.d/`. Кроме того, первая буква имени файла ссылки в каталоге уровня запуска указывает, следует ли запускать или прекращать службу для соответствующего уровня выполнения. Файловое имя ссылки, начинающееся с буквы `K`, определяет, что служба будет завершена при переходе на этот уровень выполнения (kill). Если имя файла начинается с буквы `S`, то служба будет запускаться при переходе на этот уровень выполнения (start). Например, в каталоге `/etc/rc1.d/` будет много ссылок на сетевые сценарии, начинающиеся с буквы `K`, учитывая, что уровень выполнения 1 - это однопользовательский уровень выполнения без подключения к сети. 
 
-Уровень выполнения команды показывает текущий уровень выполнения системы. Команда `runlevel` показывает два значения, первое - предыдущий уровень выполнения, а второе - текущий уровень:
+Команда `runlevel` показывает текущий уровень выполнения системы. Команда `runlevel` показывает два значения, первое - предыдущий уровень выполнения, а второе - текущий уровень:
 ```console
 $ runlevel
 N 3
