--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
@@ -4,7 +4,7 @@
 |:----------------|:--------------------------------------------|
 | **Версия:**       | 5.0                                         |
 | **Тема:**         | 101 Системная фрхитектура                   |                           
-| **Цель:**         | 101.3 Изменение уровней запуска/целей загрузки и выключение или перезагрузка системы |
+| **Цель:**         | 101.3 Изменение уровней выполнения(уровней запуска), выключение и перезагрузка системы |
 | **Урок:**         | 1 из 1                                      |
 
 
@@ -116,46 +116,54 @@ N 3
 * `service`  
 Самый распространенный тип модуля для активных системных ресурсов, которые можно запускать, прерывать и перезагружать. 
 * `socket`  
-Тип устройства сокета может быть сокетом файловой системы или сетевым сокетом. У всех модулей сокета есть соответствующий модуль обслуживания, загружаемый, когда сокет получает запрос. 
+Тип устройства socket может быть сокетом файловой системы или сетевым сокетом. У всех модулей сокета есть соответствующий модуль обслуживания, загружаемый, когда сокет получает запрос. 
 * `device`  
-Единица устройства связана с аппаратным устройством, идентифицированным ядром. Устройство будет считаться модулем systemd только в том случае, если для этой цели существует правило udev. Модуль устройства может использоваться для разрешения зависимостей конфигурации при обнаружении определенного оборудования, учитывая, что свойства из правила udev могут использоваться в качестве параметров для модуля устройства. 
+Модуль device связан с аппаратным устройством, идентифицированным ядром. Устройство будет считаться модулем systemd только в том случае, если для этого уровня существует правило udev. Модуль device может использоваться для разрешения зависимостей конфигурации при обнаружении определенного оборудования, учитывая, что свойства из правила udev могут использоваться в качестве параметров для модуля device. 
 * `mount`  
-Модуль монтирования - это определение точки монтирования в файловой системе, подобное записи в `/etc/fstab`. автомонтировать Модуль 
+Модуль mount - это определение точки монтирования в файловой системе, подобное записи в `/etc/fstab`. 
 * `automount`  
-также является определением точки монтирования в файловой системе, но монтируется автоматически. Каждый модуль автомонтирования имеет соответствующий модуль монтирования, который запускается при доступе к точке монтирования автомонтирования. 
+Модуль automount также является определением точки монтирования в файловой системе, но монтируется автоматически. Каждый модуль автомонтирования имеет соответствующий модуль монтирования, который запускается при доступе к точке монтирования автомонтирования. 
 * `target`  
-Целевая единица - это группа других единиц, управляемая как единая единица. 
+target - это группа модулей, управляемая как единый модуль. 
 * `snapshot`  
-Единица моментального снимка - это сохраненное состояние менеджера systemd(доступно не во всех дистрибутивах Linux). Основная команда для управления юнитами systemd - это `systemctl`. Команда `systemctl` используется для выполнения всех задач, касающихся активации, деактивации, выполнения, прерывания, мониторинга и т. д., Например, для фиктивного модуля с именем `unit.service` наиболее распространенными действиями `systemctl` будут: 
+snapshot - это сохраненное состояние менеджера systemd(доступно не во всех дистрибутивах Linux). 
+
+Основная команда для управления модулями systemd - это `systemctl`. Команда `systemctl` используется для выполнения всех задач, касающихся активации, деактивации, выполнения, прерывания, мониторинга и т. д., например, для фиктивного модуля с именем `unit.service` наиболее распространенными действиями `systemctl` будут: 
 
 * `systemctl start unit.service`  
-Запускает агрегат. 
+Запускает модуль. 
 * `systemctl stop unit.service`  
-Останавливает агрегат. 
+Останавливает модуль. 
 * `systemctl restart unit.service`  
-Перезапускает устройство. 
+Перезапускает модуль. 
 * `systemctl status unit.service`  
-Показывает состояние устройства, в том числе, работает он или нет. 
+Показывает состояние модуля, в том числе, работает он или нет. 
 * `systemctl is-active unit.service`  
-Отображается как активный, если блок работает, или неактивный в противном случае. 
+Показывает *активный*, если блок работает, или неактивный в противном случае. 
 * `systemctl enable unit.service`  
 Включает модуль, то есть модуль будет загружаться во время инициализации системы. 
 * `systemctl disable unit.service`  
-устройство не запускается с системой. 
+`unit` не будет запускаться при старте системы. 
 * `systemctl is-enabled unit.service`  
-Проверяет, запускается ли агрегат вместе с системой. Ответ хранится в переменной `$?`. Значение `0` указывает, что модуль начинается с системы, а значение `1` указывает, что модуль не запускается с системой.
+Проверяет, запускается ли модуль вместе с системой. Ответ хранится в переменной `$?`. Значение `0` указывает на то, что `unit` запускается с системой, а значение `1` указывает, что `unit` не запускается с системой.
 
->В более новых установках systemd фактически отображается конфигурация устройства для времени загрузки. Например:
+>Более новые установки systemd фактически отображают конфигурацию модуля во время загрузки. Например:
 >
 >```console
 >$ systemctl is-enabled apparmor.service
 >enabled
 ```
-Если в системе нет других модулей с таким же именем, то суффикс после точки можно опустить. Если, например, существует только один модуль `httpd` типа `service`, тогда в качестве параметра модуля для `systemctl` достаточно указать только `httpd`. Команда `systemctl` также может управлять `системными целями`. Например, модуль `multi-user.target` объединяет все модули, необходимые для многопользовательской системной среды. Он аналогичен уровню выполнения 3 в системе, использующей SysV. Команда `systemctl isolate` чередует разные цели. Итак, чтобы вручную изменить целевой многопользовательский режим:
+Если в системе нет других модулей с таким же именем, то суффикс после точки можно опустить. Если, например, существует только один модуль `httpd` типа `service`, тогда в качестве параметра модуля для `systemctl` достаточно указать только `httpd`. 
+
+Команда `systemctl` также может управлять `системными целями`. Например, модуль `multi-user.target` объединяет все модули, необходимые для многопользовательской системной среды. Он аналогичен уровню выполнения 3 в системе, использующей SysV. 
+
+Команда `systemctl isolate` чередует разные цели. Итак, чтобы вручную изменить целевой многопользовательский режим:
 ```console
 # systemctl isolate multi-user.target
 ```
-Существуют соответствующие цели для уровней запуска SysV, начиная с `runlevelO.target` и заканчивая `runlevel6.target`. Однако systemd не использует файл `/etc/inittab`. Чтобы изменить системную цель по умолчанию, в список параметров ядра можно добавить параметр `systemd.unit`. Например, чтобы использовать `multi-user.target` в качестве стандартной цели, параметр ядра должен иметь вид `systemd.unit=multi-user.target`. Все параметры ядра можно сделать постоянными, изменив конфигурацию загрузчика. Другой способ изменить цель по умолчанию - изменить символическую ссылку `/etc/systemd/system/default.target`, чтобы она указывала на желаемую цель. Переопределение ссылки может быть выполнено самой командой `systemctl`:
+Существуют соответствующие цели для уровней запуска SysV, начиная с `runlevelO.target` и заканчивая `runlevel6.target`. Однако systemd не использует файл `/etc/inittab`. Чтобы изменить системную цель по умолчанию, в список параметров ядра можно добавить параметр `systemd.unit`. Например, чтобы использовать `multi-user.target` в качестве стандартной цели, параметр ядра должен иметь вид `systemd.unit=multi-user.target`. Все параметры ядра можно сделать постоянными, изменив конфигурацию загрузчика. 
+
+Другой способ изменить цель по умолчанию - изменить символическую ссылку `/etc/systemd/system/default.target`, чтобы она указывала на желаемую цель. Переопределение ссылки может быть выполнено самой командой `systemctl`:
 ```console
 # systemctl set-default multi-user.target
 ```
@@ -166,11 +174,11 @@ graphical.target
 ```
 Подобно системам, использующим SysV, цель по умолчанию никогда не должна указывать на `shutdown.target`, поскольку она соответствует уровню выполнения 0 (завершение работы). 
 
-Файлы конфигурации, связанные с каждым модулем, можно найти в каталоге `/lib/systemd/system/`. Команда `systemctl list-unit-files` выводит список всех доступных модулей и показывает, разрешено ли им запускаться при загрузке системы. Опция `--type` выберет только единицы для данного типа, как в `systemctl list-unit-files --type=service` и `systemctl list-unit-files --type=target`. 
+Файлы конфигурации, связанные с каждым модулем, можно найти в каталоге `/lib/systemd/system/`. Команда `systemctl list-unit-files` выводит список всех доступных модулей и показывает, разрешено ли им запускаться при загрузке системы. Опция `--type` выберет только модули для данного типа, как в `systemctl list-unit-files --type=service` и `systemctl list-unit-files --type=target`. 
 
 Активные юниты или юниты, которые были активны во время текущего системного сеанса, могут быть перечислены с помощью команды `systemctl list-units`. Как и опция `list-unit-files`, команда `systemctl list-units --type=service` выберет только единицы типа `service`, а команда `systemctl list-units --type=target` выберет только единицы типа `target`. 
 
-systemd также отвечает за запуск и реакцию на события, связанные с питанием. Команда `systemctl suspend` переведет систему в режим пониженного энергопотребления, сохраняя текущие данные в памяти. Команда `systemctl hibernate` скопирует все данные из памяти на диск, поэтому текущее состояние системы может быть восстановлено после ее выключения. Действия, связанные с такими событиями, определены в файле `/etc/systemd/logind.conf` или в отдельных файлах внутри каталога `/etc/systemd/logind.conf.d/`. Однако эту функцию systemd можно использовать только тогда, когда в системе не запущен другой менеджер питания, например демон `acpid`. Демон `acpid` является основным диспетчером питания для Linux и позволяет более точно настраивать действия после событий, связанных с питанием, таких как закрытие крышки ноутбука, низкий уровень заряда аккумулятора или уровень заряда аккумулятора.
+systemd также отвечает за запуск и реакцию на события, связанные с питанием. Команда `systemctl suspend` переведет систему в режим пониженного энергопотребления, сохраняя текущие данные в памяти. Команда `systemctl hibernate` скопирует все данные из памяти на диск, поэтому текущее состояние системы может быть восстановлено после ее выключения. Действия, связанные с такими событиями, определены в файле `/etc/systemd/logind.conf` или в отдельных файлах внутри каталога `/etc/systemd/logind.conf.d/`. Однако эту функцию systemd можно использовать только тогда, когда в системе не запущен другой менеджер питания, например демон `acpid`. Демон `acpid` является основным диспетчером питания для Linux и позволяет более точно настраивать действия после событий, связанных с питанием, таких как закрытие крышки ноутбука, низкий уровень заряда аккумулятора или заряд аккумулятора.
 
 
 ## Upstart
@@ -209,15 +217,15 @@ tty6 start/running, process 3282
 ```console
 # stop tty6
 ```
-Upstart не использует файл `/etc/inittab` для определения уровней запуска, но унаследованные команды `runlevel` и `telinit` по-прежнему можно использовать для проверки и переключения между уровнями выполнения.
+Upstart не использует файл `/etc/inittab` для определения уровней выполнения, но унаследованные команды `runlevel` и `telinit` по-прежнему можно использовать для проверки и переключения между уровнями выполнения.
 >Upstart был разработан для дистрибутива Ubuntu Linux, чтобы облегчить параллельный запуск процессов. Ubuntu прекратил использовать Upstart с 2015 года, когда он перешел с Upstart на systemd.
 
 
 ## Завершение работы и перезапуск
 
-Неудивительно, что очень традиционная команда, используемая для выключения или перезапуска системы, называется `shutdown` (выключением). Команда `shutdown` добавляет дополнительные функции к процессу отключения питания: она автоматически уведомляет всех вошедших в систему пользователей предупреждающим сообщением в их сеансах оболочки, и новые входы в систему предотвращаются. Команда `shutdown` действует как посредник для процедур SysV или systemd, то есть выполняет запрошенное действие, вызывая соответствующее действие в диспетчере служб, принятом системой. 
+Традиционно команда, используемая для выключения или перезапуска системы, называется `shutdown` (выключением). Команда `shutdown` добавляет дополнительные функции к процессу отключения питания: она автоматически уведомляет всех вошедших в систему пользователей предупреждающим сообщением в их сеансах оболочки, и новые входы в систему предотвращаются. Команда `shutdown` действует как посредник для процедур SysV или systemd, то есть выполняет запрошенное действие, вызывая соответствующее действие в диспетчере служб, принятом системой. 
 
-После `shutdown` все процессы получают сигнал `SIGTERM`, за которым следует сигнал `SIGKILL`, после чего система выключается или меняет уровень выполнения. По умолчанию, когда не используются ни параметры `-h`, ни `-r`, система переходит на уровень выполнения 1, то есть в однопользовательский режим. Чтобы изменить параметры выключения по умолчанию, команду следует выполнить со следующим синтаксисом:
+После того как `shutdown` выполнен, все процессы получают сигнал `SIGTERM`, за которым следует сигнал `SIGKILL`, после чего система выключается или меняет уровень выполнения. По умолчанию, когда не используются ни параметры `-h`, ни `-r`, система переходит на уровень выполнения 1, то есть в однопользовательский режим. Чтобы изменить параметры выключения по умолчанию, команду следует выполнить со следующим синтаксисом:
 ```console
 $ shutdown [option] time [message]
 ```
@@ -232,11 +240,11 @@ $ shutdown [option] time [message]
 
 Параметр `message` - это текст предупреждения, отправляемый всем терминальным сеансам авторизованных пользователей. 
 
-Реализация SysV позволяет ограничить количество пользователей, которые смогут перезапустить машину, нажав <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Del</kbd>. Это возможно, поместив опцию `-a` для команды `shutdown`, присутствующей в строке, касающейся `ctrlaltdel` в файле `/etc/inittab`. Таким образом, только пользователи, чьи имена находятся в файле `/etc/shutdown.allow`, смогут перезапустить систему с помощью комбинации клавиш <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Del</kbd>. 
+Реализация SysV позволяет ограничить количество пользователей, которые смогут перезапустить машину, нажав <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Del</kbd>. Это достигается путем помещения опции `-a` для команды `shutdown`, присутствующей в строке, касающейся `ctrlaltdel` в файле `/etc/inittab`. Таким образом, только пользователи, чьи имена находятся в файле `/etc/shutdown.allow`, смогут перезапустить систему с помощью комбинации клавиш <kbd>Ctrl</kbd>+<kbd>Alt</kbd>+<kbd>Del</kbd>. 
 
 Команду `systemctl` также можно использовать для выключения или перезапуска компьютера в системах, использующих systemd. Для перезапуска системы следует использовать команду `systemctl reboot`. Для выключения системы следует использовать команду `systemctl poweroff`. Обе команды требуют для запуска прав root, так как обычные пользователи не могут выполнять такие процедуры.
 
->Некоторые дистрибутивы Linux будут связывать выключение и перезагрузку с systemctl как отдельные команды. Например:
+>Некоторые дистрибутивы Linux будут связывать `poweroff` и `reboot` с `systemctl` как отдельные команды. Например:
 >```console
 >$ sudo which poweroff
 >/usr/sbin/poweroff
@@ -246,8 +254,6 @@ $ shutdown [option] time [message]
 Не все операции по техническому обслуживанию требуют выключения или перезапуска системы. Однако, когда необходимо изменить состояние системы на однопользовательский режим, важно предупредить вошедших в систему пользователей, чтобы они не пострадали от внезапного прекращения их деятельности. 
 
 Подобно тому, что делает команда `shutdown` при выключении или перезапуске системы, команда `wall` может отправлять сообщение терминальным сеансам всех вошедших в систему пользователей. Для этого системному администратору нужно только предоставить файл или напрямую написать сообщение в качестве параметра для команды `wall`.
-
-  
   
   
 ## Упражнения для закрепления
