Update 101.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 101: System Architecture/101.3 Change runlevels, boot targets and shutdown or reboot system/101.3 Lesson 1.md
@@ -265,8 +265,6 @@ $ shutdown [option] time [message]
 3. Используя команду `systemctl`, как пользователь может проверить, запущен ли модуль `sshd.service`? 
 
 4. Какая команда должна быть выполнена в системе на основе `systemd`, чтобы включить активацию модуля sshd.service во время инициализации системы?
-
-
   
   
 ## Упражнения на размышление
@@ -278,7 +276,6 @@ $ shutdown [option] time [message]
 3. Как можно проверить системную цель по умолчанию в системе на основе systemd? 
 
 4. Как можно отменить перезагрузку системы, запланированную с помощью команды выключения?
-
 
 
 ## Резюме
@@ -295,9 +292,30 @@ $ shutdown [option] time [message]
 * Традиционные команды управления питанием, такие как выключение и команда `wall`.
 
 
-
 ## Ответы на упражнения для закрепления
 
+**1. Как можно было использовать команду `telinit` для перезагрузки системы?**  
+Команда telinit 6 заменит уровень запуска 6, то есть перезагрузит систему.
+
+**2. Что произойдет со службами, связанными с файлом `/etc/rc1.d/K90network`, когда система перейдет на уровень запуска 1?**  Из-за буквы `K` в начале имени файла связанные службы будут остановлены.
+
+**3. Используя команду `systemctl`, как пользователь может проверить, запущен ли модуль `sshd.service`?**  
+С помощью команды `systemctl status sshd.service` или `systemctl is-active sshd.service`.
+
+**4. Какая команда должна быть выполнена в системе на основе `systemd`, чтобы включить активацию модуля sshd.service во время инициализации системы?**  
+Команда `systemctl enable sshd.service` выполняется пользователем root.
 
 
 ## Ответы на упражнения для размышления
+
+**1. В системе на основе SysV предположим, что уровень запуска по умолчанию, определенный в `/etc/inittab`, равен 3, но система всегда запускается на уровне выполнения 1. Какова вероятная причина этого?**  
+Параметры `1` или `S` могут присутствовать в списке параметров ядра.
+
+**2. Хотя файл `/sbin/init` можно найти в системах на основе systemd, это всего лишь символическая ссылка на другой исполняемый файл. В таких системах на какой файл указывает `/sbin/init`?**  
+Основной двоичный файл systemd: `/lib/systemd/systemd`.
+
+**3. Как можно проверить системную цель по умолчанию в системе на основе systemd?**  
+Символьная ссылка `/etc/systemd/system/default.target` будет указывать на файл модуля, определенный как цель по умолчанию. Также можно использовать команду `systemctl get-default`.
+
+**4. Как можно отменить перезагрузку системы, запланированную с помощью команды выключения?**  
+Следует использовать команду `shutdown -c`.
