Update 102.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.1 Design hard disk layout/102.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 102: Linux Installation and Package Management/102.1 Design hard disk layout/102.1 Lesson 1.md
@@ -10,4 +10,39 @@
 
 ## Введение
 
-Для достижения этой цели вам необходимо понимать взаимосвязь между дисками, разделами, файловыми системами и томами. Думайте о диске (или запоминающем устройстве, поскольку современные устройства вообще не содержат никаких «дисков») как о «физическом контейнере» для ваших данных. Прежде чем диск можно будет использовать на компьютере, его необходимо разбить на разделы. Раздел - это логическая часть физического диска, подобная логическому «забору». Разделение - это способ «разделить» информацию, хранящуюся на диске, например, отделить данные операционной системы от данных пользователя. Каждому диску нужен как минимум один раздел, но при необходимости может быть несколько разделов, и информация о них хранится в таблице разделов. Эта таблица включает информацию о первом и последнем секторах раздела и его типе, а также дополнительную информацию о каждом разделе. Внутри каждого раздела есть файловая система. Файловая система описывает способ хранения информации на диске. Эта информация включает в себя то, как организованы каталоги, каковы отношения между ними, где находятся данные для каждого файла и т. Д. Разделы не могут занимать несколько дисков. Но с помощью диспетчера логических томов (LVM) можно объединить несколько разделов, даже на разных дисках, в единый логический том. Логические тома абстрагируются от ограничений физических устройств и позволяют работать с «пулами» дискового пространства, которые можно объединять или распределять гораздо более гибко, чем традиционные разделы. LVM полезен в ситуациях, когда вам нужно добавить больше места в раздел без необходимости переноса данных на более крупное устройство. В этой задаче вы узнаете, как разработать схему разделения диска для системы Linux, выделяя файловые системы и пространство подкачки для отдельных разделов или дисков, когда это необходимо. О том, как создавать разделы и файловые системы и управлять ими, мы поговорим в других уроках. Мы обсудим обзор LVM в этой цели, но подробное объяснение выходит за рамки этой задачи.
+Чтобы добиться успеха в этом уроке вам необходимо понимать взаимосвязь между *дисками*, *разделами*, *файловыми системами* и *томами*. 
+
+Думайте о диске (или *запоминающем устройстве*, поскольку современные устройства вообще не содержат никаких «дисков») как о «физическом контейнере» для ваших данных. 
+
+Прежде чем диск можно будет использовать на компьютере, его необходимо разбить на разделы. Раздел - это логическая часть физического диска, подобная логическому «забору». Разбиение - это способ «разделить» информацию, хранящуюся на диске, например, отделить данные операционной системы от данных пользователя. 
+
+Каждому диску нужен как минимум один раздел, но при необходимости может быть несколько разделов, и информация о них хранится в таблице разделов. Эта таблица включает информацию о первом и последнем секторах раздела и его типе, а также дополнительную информацию о каждом разделе. 
+
+Внутри каждого раздела есть файловая система. Файловая система описывает способ хранения информации на диске. Эта информация включает в себя то, как организованы каталоги, каковы отношения между ними, где находятся данные для каждого файла и т.д. 
+
+Разделы не могут занимать несколько дисков. Но с помощью *диспетчера логических томов* (LVM) можно объединить несколько разделов, даже на разных дисках, в единый логический том. 
+
+Логические тома абстрагируются от ограничений физических устройств и позволяют работать с «пулами» дискового пространства, которые можно объединять или распределять гораздо более гибко, чем традиционные разделы. LVM полезен в ситуациях, когда вам нужно добавить больше места в раздел без необходимости переноса данных на более емкое устройство. 
+
+В этом уроке вы узнаете, как разработать схему разделения диска для системы Linux, выделяя файловые системы и пространство подкачки для отдельных разделов или дисков, когда это необходимо. 
+
+О том, как *создавать* и *управлять* разделами и файловыми системами, мы поговорим в других уроках. Мы обсудим обзор LVM в этом уроке, но подробное объяснение выходит за рамки этой задачи.
+
+
+## Точки монтирования
+
+Прежде чем файловая система станет доступной в Linux, ее необходимо *смонтировать*. Это означает прикрепление файловой системы к определенной точке в дереве каталогов вашей системы, называемой *точкой монтирования*. 
+
+После монтирования содержимое файловой системы будет доступно под точкой монтирования. Например, представьте, что у вас есть раздел с личными данными ваших пользователей (их домашние каталоги), содержащий каталоги `/john`, `/jack` и `/carol`. При монтировании в `/home` содержимое этих каталогов будет доступно в `/home/john`, `/home/jack` и `/home/carol`. 
+
+Точка монтирования должна существовать до монтирования файловой системы. Вы не можете смонтировать раздел в `/mnt/userdata`, если этот каталог не существует. Однако, если каталог существует и содержит файлы, эти файлы будут недоступны, пока вы не отмонтируете файловую систему. Если вы просмотрите содержимое каталога, вы увидите файлы, хранящиеся в смонтированной файловой системе, а не исходное содержимое каталога. 
+
+Файловые системы можно смонтировать где угодно. Однако есть некоторые передовые методы, которым следует следовать, чтобы упростить системное администрирование. 
+
+Традиционно `/mnt` был каталогом, в котором монтируются все внешние устройства, и ряд предварительно сконфигурированных *точек привязки* для общих устройств, таких как приводы CD-ROM (`/mnt/cdrom`) и гибкие диски (`/mnt/floppy`). 
+
+Он был заменен на `/media`, который теперь является точкой монтирования по умолчанию для любых съемных носителей (например, внешних дисков, USB-накопителей, устройств чтения карт памяти, оптических дисков и т. д.), подключенных к системе. 
+
+В большинстве современных дистрибутивов Linux и окружений рабочего стола съемные устройства автоматически монтируются в `/media/USER/LABEL` при подключении к системе, где `USER` - это имя пользователя, а `LABEL` - это метка устройства. Например, USB-накопитель с меткой `FlashDrive`, подключенный пользователем `john`, будет смонтирован в `/media/john/FlashDrive/`. То, как это делается, зависит от среды рабочего стола. 
+
+При этом всякий раз, когда вам нужно вручную смонтировать файловую систему, рекомендуется смонтировать ее в `/mnt`. Конкретные команды для управления монтированием и размонтированием файловых систем в Linux будут рассмотрены в другом уроке.
